--- a/styles/mobile.module.css
+++ b/styles/mobile.module.css
@@ -19,6 +19,7 @@
 .descriptionspecific {
   display: flex;
   justify-content: center;
+  flex-flow: wrap;
 }
 
 .chatbox {
@@ -75,8 +76,4 @@
 .anchor {
   overflow-anchor: auto;
   height: 1px;
-}
-
-.NextButton {
-  width: 100%;
 }
